refactor database
