# backend/controller/order.js
@@ -1,4 +1,5 @@
 const { Order, NOT_FOUND, CANNOT_CREATE} = require('../models/order.model');
+const { OrderItem } = require('../models/orderItem.model');
 
 /**
  * The callback to return the error or result of this function
@@ -43,6 +44,26 @@ viewOrders = (req, res) => {
   });
 };
 
+/**
+ * Getting all the menu items from a given account id.
+ * @param {int}           accountId        The id of the account
+ * @param {callback}      cb               Callback function
+ * 
+ * @returns {list of ordered menu itens including }
+ */
+viewOrdersByOrderId = (req, res) => {
+  const orderId = req.query.orderId;
+  console.log("OrderId" + orderId);
+  Order.getOrderByOrderId(orderId, (err, result) => {
+    if (err) {
+      return res.status(err.status).json({ message: err.message });
+    }
+    if (!result) {
+      return res.status(NOT_FOUND).json({ message: "Order Not Found" });
+    }
+    return res.status(200).json(result); 
+  });
+};
 
 /**
  * The callback to return the error or result of this function
@@ -53,26 +74,43 @@ viewOrders = (req, res) => {
 /**
  * This createOrder function is for creating a new order.
  * This should typically be called when the customer starts to order.
- * @param {int}           accountId        The id of the account
  * @param {int}           tableId          The id of the table
- * @param {int}           itemId           The id of the item
- * @param {int}           quantity         The quantity of item
- * @param {string}        note             The item note to send to chef
- * @param {callback}      cb               Callback function
  * 
- * @returns {null}
+ * @returns {orderId: orderId}
  */
 createOrder = (req, res) => {
-    const { accountId, tableId, itemId, quantity, note } = req.body;
-    Order.createOrder(accountId, tableId, itemId, quantity, note, (err, result) => {
+    const { tableId } = req.body;
+    Order.createOrder(tableId, (err, result) => {
         if (err) {
             return res.status(err.status).json({ message: err.message });
         }
         if (!result) {
             return res.status(NOT_FOUND).json({ message: "Cannot Create Order" });
         }
-        return res.status(200).json(result); 
+        return res.status(200).json(result);
     })
-}
 
-module.exports = { viewOrders, createOrder };
+}
+ 
+/**
+ * This addMenuItems function is for adding menu items to the order
+ * This should typically be called when the customer finalise and submit their order
+ * @param {int}           itemId          The id of the menu item
+ * @param {int}           orderId         The id of the order
+ * @param {int}           quantity        The menu item quantity
+ * @param {int}           note            The note
+ * 
+ * @returns {null}
+ */
+
+addMenuItems = (req, res) => {
+  OrderItem.addMenuitemToTheOrder(req.body, (err, result) => {
+    if (err) {
+      return res.status(err.status).json({ message: err.message });
+    }
+    return res.status(200).json({}); 
+  });
+};
+
+
+module.exports = { viewOrders, viewOrdersByOrderId, createOrder, addMenuItems };
